<resources>
    <string name="app_name">MovieTime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="apply">Apply</string>
    <string name="quantity">Quantity</string>
    <string name="nothing_to_show">OOPS NOTHING IS HERE. \nSET THE SEARCH PARAMETERS</string>
    <string name="movies">Movies</string>
    <string name="movie_info">Movie info</string>
    <string name="leave_comment">Leave comment</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="comments">COMMENTS</string>
</resources>