<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primarySecond"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="18dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/movie_info"
            android:textColor="@color/primary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/informationCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/topBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/posterImage"
                android:layout_width="148dp"
                android:layout_height="192dp"
                android:layout_margin="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/posterTitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="Sherlock"
                android:layout_margin="12dp"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/posterImage"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/movieYear"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="2010"
                android:layout_marginHorizontal="12dp"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/posterImage"
                app:layout_constraintTop_toBottomOf="@id/posterTitle"/>

            <TextView
                android:id="@+id/movieCategory"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/movies"
                android:layout_marginHorizontal="12dp"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/posterImage"
                app:layout_constraintTop_toBottomOf="@id/movieYear"/>

            <ImageView
                android:id="@+id/likeButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/like"
                android:layout_margin="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/commentButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/comment"
                android:layout_margin="12dp"
                app:layout_constraintEnd_toStartOf="@id/likeButton"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewComments"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_margin="16dp"
        android:text="@string/comments"
        android:layout_marginHorizontal="12dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/informationCardView"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/commentsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewComments">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <EditText
                android:id="@+id/editTextComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/write_your_comment"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:singleLine="false"
                android:isScrollContainer="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/leaveCommentButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/leave_comment"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:cornerRadius="16dp"
                android:padding="16dp"
                app:backgroundTint="@color/primary"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/editTextComment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>